--- a/lab_1/hello.ipynb
+++ b/lab_1/hello.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f120f003-9b53-433b-8ad2-ae7e070ffa07",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "hello world 123\n"
      ]
     }
    ],
    "source": [
-    "print('hello world')"
+    "print('hello world 123')"
    ]
   },
   {
@@ -28,108 +28,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anyio==4.8.0\n",
-      "argon2-cffi==23.1.0\n",
-      "argon2-cffi-bindings==21.2.0\n",
+      "anyio==4.10.0\n",
+      "argon2-cffi==25.1.0\n",
+      "argon2-cffi-bindings==25.1.0\n",
       "arrow==1.3.0\n",
       "asttokens==3.0.0\n",
-      "async-lru==2.0.4\n",
-      "attrs==25.1.0\n",
-      "babel==2.16.0\n",
-      "beautifulsoup4==4.12.3\n",
+      "async-lru==2.0.5\n",
+      "attrs==25.3.0\n",
+      "babel==2.17.0\n",
+      "beautifulsoup4==4.13.5\n",
       "bleach==6.2.0\n",
-      "certifi==2025.1.31\n",
+      "certifi==2025.8.3\n",
       "cffi==1.17.1\n",
-      "charset-normalizer==3.4.1\n",
-      "comm==0.2.2\n",
-      "contourpy==1.3.1\n",
+      "charset-normalizer==3.4.3\n",
+      "comm==0.2.3\n",
+      "contourpy==1.3.3\n",
       "cycler==0.12.1\n",
-      "debugpy==1.8.12\n",
-      "decorator==5.1.1\n",
+      "debugpy==1.8.16\n",
+      "decorator==5.2.1\n",
       "defusedxml==0.7.1\n",
       "executing==2.2.0\n",
-      "fastjsonschema==2.21.1\n",
-      "fonttools==4.55.8\n",
+      "fastjsonschema==2.21.2\n",
+      "fonttools==4.59.2\n",
       "fqdn==1.5.1\n",
-      "h11==0.14.0\n",
-      "httpcore==1.0.7\n",
+      "h11==0.16.0\n",
+      "httpcore==1.0.9\n",
       "httpx==0.28.1\n",
       "idna==3.10\n",
-      "ipykernel==6.29.5\n",
-      "ipython==8.31.0\n",
+      "ipykernel==6.30.1\n",
+      "ipython==9.5.0\n",
+      "ipython_pygments_lexers==1.1.1\n",
       "isoduration==20.11.0\n",
       "jedi==0.19.2\n",
-      "Jinja2==3.1.5\n",
-      "joblib==1.4.2\n",
-      "json5==0.10.0\n",
+      "Jinja2==3.1.6\n",
+      "joblib==1.5.2\n",
+      "json5==0.12.1\n",
       "jsonpointer==3.0.0\n",
-      "jsonschema==4.23.0\n",
-      "jsonschema-specifications==2024.10.1\n",
-      "jupyter-events==0.11.0\n",
-      "jupyter-lsp==2.2.5\n",
+      "jsonschema==4.25.1\n",
+      "jsonschema-specifications==2025.4.1\n",
+      "jupyter-events==0.12.0\n",
+      "jupyter-lsp==2.3.0\n",
       "jupyter_client==8.6.3\n",
-      "jupyter_core==5.7.2\n",
-      "jupyter_server==2.15.0\n",
+      "jupyter_core==5.8.1\n",
+      "jupyter_server==2.17.0\n",
       "jupyter_server_terminals==0.5.3\n",
       "jupyterlab==4.3.5\n",
       "jupyterlab_pygments==0.3.0\n",
       "jupyterlab_server==2.27.3\n",
-      "kiwisolver==1.4.8\n",
+      "kiwisolver==1.4.9\n",
+      "lark==1.2.2\n",
       "MarkupSafe==3.0.2\n",
       "matplotlib==3.10.0\n",
       "matplotlib-inline==0.1.7\n",
-      "mistune==3.1.1\n",
+      "mistune==3.1.4\n",
       "nbclient==0.10.2\n",
       "nbconvert==7.16.6\n",
       "nbformat==5.10.4\n",
       "nest-asyncio==1.6.0\n",
       "notebook_shim==0.2.4\n",
       "numpy==2.2.2\n",
-      "overrides==7.7.0\n",
-      "packaging==24.2\n",
+      "packaging==25.0\n",
       "pandas==2.2.3\n",
       "pandocfilters==1.5.1\n",
-      "parso==0.8.4\n",
+      "parso==0.8.5\n",
       "pexpect==4.9.0\n",
-      "pillow==11.1.0\n",
-      "platformdirs==4.3.6\n",
-      "prometheus_client==0.21.1\n",
-      "prompt_toolkit==3.0.50\n",
-      "psutil==6.1.1\n",
+      "pillow==11.3.0\n",
+      "platformdirs==4.4.0\n",
+      "prometheus_client==0.22.1\n",
+      "prompt_toolkit==3.0.52\n",
+      "psutil==7.0.0\n",
       "ptyprocess==0.7.0\n",
       "pure_eval==0.2.3\n",
       "pycparser==2.22\n",
-      "Pygments==2.19.1\n",
-      "pyparsing==3.2.1\n",
+      "Pygments==2.19.2\n",
+      "pyparsing==3.2.3\n",
       "python-dateutil==2.9.0.post0\n",
-      "python-json-logger==3.2.1\n",
-      "pytz==2025.1\n",
+      "python-json-logger==3.3.0\n",
+      "pytz==2025.2\n",
       "PyYAML==6.0.2\n",
-      "pyzmq==26.2.1\n",
+      "pyzmq==27.0.2\n",
       "referencing==0.36.2\n",
-      "requests==2.32.3\n",
+      "requests==2.32.5\n",
       "rfc3339-validator==0.1.4\n",
       "rfc3986-validator==0.1.1\n",
-      "rpds-py==0.22.3\n",
+      "rfc3987-syntax==1.1.0\n",
+      "rpds-py==0.27.1\n",
       "scikit-learn==1.6.1\n",
       "scipy==1.15.1\n",
       "seaborn==0.13.2\n",
       "Send2Trash==1.8.3\n",
-      "setuptools==75.8.0\n",
+      "setuptools==80.9.0\n",
       "six==1.17.0\n",
       "sniffio==1.3.1\n",
-      "soupsieve==2.6\n",
+      "soupsieve==2.8\n",
       "stack-data==0.6.3\n",
       "terminado==0.18.1\n",
-      "threadpoolctl==3.5.0\n",
+      "threadpoolctl==3.6.0\n",
       "tinycss2==1.4.0\n",
-      "tornado==6.4.2\n",
+      "tornado==6.5.2\n",
       "traitlets==5.14.3\n",
-      "types-python-dateutil==2.9.0.20241206\n",
-      "typing_extensions==4.12.2\n",
-      "tzdata==2025.1\n",
+      "types-python-dateutil==2.9.0.20250822\n",
+      "typing_extensions==4.15.0\n",
+      "tzdata==2025.2\n",
       "uri-template==1.3.0\n",
-      "urllib3==2.3.0\n",
+      "urllib3==2.5.0\n",
       "wcwidth==0.2.13\n",
       "webcolors==24.11.1\n",
       "webencodings==0.5.1\n",
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c817afc3-f180-4fa7-ba46-87e9a4c3f8c2",
    "metadata": {},
    "outputs": [],
@@ -177,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
