--- a/a2/scripts/model_registry_browser.ipynb
+++ b/a2/scripts/model_registry_browser.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "ac2d3b85",
    "metadata": {},
    "outputs": [
@@ -50,27 +50,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "5d4bc3f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    model_version train_start   train_end   oot_start     oot_end  auc_train  auc_test   auc_oot  promoted_flag                promoted_at\n",
-      "0     credit_model_xgb_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.933453  0.782610  0.859513          False                        NaT\n",
-      "1     credit_model_xgb_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.933453  0.782610  0.859513           True 2025-10-28 15:43:33.592478\n",
-      "2     credit_model_xgb_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.933453  0.782610  0.859513          False                        NaT\n",
-      "3     credit_model_xgb_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.933453  0.782610  0.859513          False                        NaT\n",
-      "4     credit_model_xgb_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.933453  0.782610  0.859513          False                        NaT\n",
-      "5     credit_model_xgb_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.933453  0.782610  0.859513          False                        NaT\n",
-      "6     credit_model_xgb_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.933453  0.782610  0.859513          False                        NaT\n",
-      "7     credit_model_xgb_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.933453  0.782610  0.859513          False                        NaT\n",
-      "8  credit_model_logreg_2024_01_01  2022-11-01  2023-10-31  2023-11-01  2023-12-31   0.821314  0.763695  0.833376          False                        NaT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def read_registry_parquet(dir_path=REG_DIR) -> pd.DataFrame:\n",
     "    if not os.path.exists(dir_path):\n",
@@ -98,15 +81,297 @@
     "        \"model_version\",\"flavor\",\"train_test_start_date\",\"train_test_end_date\",\n",
     "        \"oot_start_date\",\"oot_end_date\",\"auc_train\",\"auc_test\",\"auc_oot\",\n",
     "        \"promoted\",\"promoted_at_iso\",\"artefact_dir\"\n",
-    "    ])\n",
-    "    \n",
-    "print(reg_df)"
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "94eb3d7c-f415-400e-9193-424c03d3ef5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_keys = [c for c in reg_df.columns if c not in [\"promoted_flag\", \"promoted_at\"]]\n",
+    "sort_cols = [\"promoted_flag\", \"promoted_at\"]\n",
+    "\n",
+    "reg_df = (\n",
+    "    reg_df.sort_values(sort_cols, ascending=False)\n",
+    "          .drop_duplicates(subset=subset_keys, keep=\"first\")\n",
+    "          .reset_index(drop=True)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "50298a60-cc04-4396-9d39-8eb309677d31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_version</th>\n",
+       "      <th>train_start</th>\n",
+       "      <th>train_end</th>\n",
+       "      <th>oot_start</th>\n",
+       "      <th>oot_end</th>\n",
+       "      <th>auc_train</th>\n",
+       "      <th>auc_test</th>\n",
+       "      <th>auc_oot</th>\n",
+       "      <th>promoted_flag</th>\n",
+       "      <th>promoted_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>credit_model_xgb_2024_12_01</td>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>2024-09-30</td>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>2024-11-30</td>\n",
+       "      <td>0.969035</td>\n",
+       "      <td>0.904500</td>\n",
+       "      <td>0.930115</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-10-29 09:54:23.237161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>credit_model_xgb_2024_09_01</td>\n",
+       "      <td>2023-07-01</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>0.955181</td>\n",
+       "      <td>0.887973</td>\n",
+       "      <td>0.926537</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-10-29 09:51:52.554377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>credit_model_xgb_2024_08_01</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "      <td>2024-06-01</td>\n",
+       "      <td>2024-07-31</td>\n",
+       "      <td>0.997877</td>\n",
+       "      <td>0.873929</td>\n",
+       "      <td>0.916328</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-10-29 09:51:37.389903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>credit_model_xgb_2024_06_01</td>\n",
+       "      <td>2023-04-01</td>\n",
+       "      <td>2024-03-31</td>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "      <td>0.961449</td>\n",
+       "      <td>0.882970</td>\n",
+       "      <td>0.910732</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-10-29 09:37:22.167299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>credit_model_xgb_2024_03_01</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>2024-02-29</td>\n",
+       "      <td>0.988702</td>\n",
+       "      <td>0.828027</td>\n",
+       "      <td>0.886269</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-10-29 09:15:57.408058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>credit_model_xgb_2024_07_01</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2024-04-30</td>\n",
+       "      <td>2024-05-01</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>0.977888</td>\n",
+       "      <td>0.851782</td>\n",
+       "      <td>0.897121</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>credit_model_xgb_2024_11_01</td>\n",
+       "      <td>2023-09-01</td>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>2024-09-01</td>\n",
+       "      <td>2024-10-31</td>\n",
+       "      <td>0.998222</td>\n",
+       "      <td>0.898124</td>\n",
+       "      <td>0.923353</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>credit_model_logreg_2024_03_01</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>2024-02-29</td>\n",
+       "      <td>0.830631</td>\n",
+       "      <td>0.804494</td>\n",
+       "      <td>0.839258</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>credit_model_logreg_2024_06_01</td>\n",
+       "      <td>2023-04-01</td>\n",
+       "      <td>2024-03-31</td>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "      <td>0.835313</td>\n",
+       "      <td>0.843728</td>\n",
+       "      <td>0.880166</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>credit_model_logreg_2024_03_01</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>2024-02-29</td>\n",
+       "      <td>0.830631</td>\n",
+       "      <td>0.804494</td>\n",
+       "      <td>0.839258</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>credit_model_logreg_2024_09_01</td>\n",
+       "      <td>2023-07-01</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>0.849155</td>\n",
+       "      <td>0.846426</td>\n",
+       "      <td>0.879556</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>credit_model_logreg_2024_12_01</td>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>2024-09-30</td>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>2024-11-30</td>\n",
+       "      <td>0.896452</td>\n",
+       "      <td>0.884744</td>\n",
+       "      <td>0.915689</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>credit_model_logreg_2024_08_01</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "      <td>2024-06-01</td>\n",
+       "      <td>2024-07-31</td>\n",
+       "      <td>0.850003</td>\n",
+       "      <td>0.833698</td>\n",
+       "      <td>0.864242</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>credit_model_logreg_2024_11_01</td>\n",
+       "      <td>2023-09-01</td>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>2024-09-01</td>\n",
+       "      <td>2024-10-31</td>\n",
+       "      <td>0.882350</td>\n",
+       "      <td>0.877975</td>\n",
+       "      <td>0.905065</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>credit_model_logreg_2024_07_01</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2024-04-30</td>\n",
+       "      <td>2024-05-01</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>0.850244</td>\n",
+       "      <td>0.813775</td>\n",
+       "      <td>0.853727</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     model_version train_start   train_end   oot_start     oot_end  auc_train  auc_test   auc_oot  promoted_flag                promoted_at\n",
+       "0      credit_model_xgb_2024_12_01  2023-10-01  2024-09-30  2024-10-01  2024-11-30   0.969035  0.904500  0.930115           True 2025-10-29 09:54:23.237161\n",
+       "1      credit_model_xgb_2024_09_01  2023-07-01  2024-06-30  2024-07-01  2024-08-31   0.955181  0.887973  0.926537           True 2025-10-29 09:51:52.554377\n",
+       "2      credit_model_xgb_2024_08_01  2023-06-01  2024-05-31  2024-06-01  2024-07-31   0.997877  0.873929  0.916328           True 2025-10-29 09:51:37.389903\n",
+       "3      credit_model_xgb_2024_06_01  2023-04-01  2024-03-31  2024-04-01  2024-05-31   0.961449  0.882970  0.910732           True 2025-10-29 09:37:22.167299\n",
+       "4      credit_model_xgb_2024_03_01  2023-01-01  2023-12-31  2024-01-01  2024-02-29   0.988702  0.828027  0.886269           True 2025-10-29 09:15:57.408058\n",
+       "5      credit_model_xgb_2024_07_01  2023-05-01  2024-04-30  2024-05-01  2024-06-30   0.977888  0.851782  0.897121          False                        NaT\n",
+       "6      credit_model_xgb_2024_11_01  2023-09-01  2024-08-31  2024-09-01  2024-10-31   0.998222  0.898124  0.923353          False                        NaT\n",
+       "7   credit_model_logreg_2024_03_01  2023-01-01  2023-12-31  2024-01-01  2024-02-29   0.830631  0.804494  0.839258          False                        NaT\n",
+       "8   credit_model_logreg_2024_06_01  2023-04-01  2024-03-31  2024-04-01  2024-05-31   0.835313  0.843728  0.880166          False                        NaT\n",
+       "9   credit_model_logreg_2024_03_01  2023-01-01  2023-12-31  2024-01-01  2024-02-29   0.830631  0.804494  0.839258          False                        NaT\n",
+       "10  credit_model_logreg_2024_09_01  2023-07-01  2024-06-30  2024-07-01  2024-08-31   0.849155  0.846426  0.879556          False                        NaT\n",
+       "11  credit_model_logreg_2024_12_01  2023-10-01  2024-09-30  2024-10-01  2024-11-30   0.896452  0.884744  0.915689          False                        NaT\n",
+       "12  credit_model_logreg_2024_08_01  2023-06-01  2024-05-31  2024-06-01  2024-07-31   0.850003  0.833698  0.864242          False                        NaT\n",
+       "13  credit_model_logreg_2024_11_01  2023-09-01  2024-08-31  2024-09-01  2024-10-31   0.882350  0.877975  0.905065          False                        NaT\n",
+       "14  credit_model_logreg_2024_07_01  2023-05-01  2024-04-30  2024-05-01  2024-06-30   0.850244  0.813775  0.853727          False                        NaT"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94eb3d7c-f415-400e-9193-424c03d3ef5a",
+   "id": "89f2ebc7-9431-418f-a790-badeb52a104b",
    "metadata": {},
    "outputs": [],
    "source": []
